--- a/Hemsida/styles/style.css
+++ b/Hemsida/styles/style.css
@@ -1,25 +1,30 @@
 nav {
   display: flex;
-  font-size: 10px;
-  align-items: center;
   justify-content: space-between;
-  height: 15px;
+  align-items: center;
+  height: 100px;
   border-bottom: 0.4px solid rgb(105, 105, 105);
-  padding: 2px;
 }
 
 .menu {
   display: flex;
-  font-size: 8px;
+  font-size: 40px;
   list-style-type: none;
   column-gap: 10px;
   color: rgb(145, 56, 56);
   letter-spacing: 0.5px;
+  justify-content: space-between;
+  height: 45px;
 }
 
 .logo {
   color: rgb(133, 55, 55);
   letter-spacing: 1px;
+  font-size: 50px;
+  align-items: center;
+  justify-content: space-between;
+  height: 15px;
+  padding: 2px;
 }
 
 body {
@@ -27,6 +32,6 @@ body {
 }
 
 img {
-  width: 70px;
-  border-radius: 2px;
+  width: 300px;
+  border-radius: 6px;
 }
