--- a/Hemsida/styles/style.css
+++ b/Hemsida/styles/style.css
@@ -3,18 +3,41 @@ nav {
   justify-content: space-between;
   align-items: center;
   height: 100px;
-  border-bottom: 0.4px solid rgb(105, 105, 105);
+  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+  padding: 0px 5%;
+}
+
+section {
+  width: 100%;
+  height: 95vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+nav ul li a {
+  margin: 30px;
+  color: #505050;
+}
+ul {
+  list-style-type: none;
+}
+nav ul {
+  display: flex;
+}
+
+a {
+  text-decoration: none;
 }
 
 .menu {
   display: flex;
   font-size: 40px;
   list-style-type: none;
-  column-gap: 10px;
   color: rgb(145, 56, 56);
   letter-spacing: 0.5px;
   justify-content: space-between;
   height: 45px;
+  font-family: "Open Sans", sans-serif;
 }
 
 .logo {
@@ -23,15 +46,16 @@ nav {
   font-size: 50px;
   align-items: center;
   justify-content: space-between;
-  height: 15px;
-  padding: 2px;
+  font-family: "Lobster", cursive;
 }
 
 body {
   background-color: rgb(255, 227, 151);
 }
 
-img {
+.img1 {
+  left: 70%;
+  bottom: 0px;
   width: 300px;
   border-radius: 6px;
 }
