--- a/Hemsida/styles/style.css
+++ b/Hemsida/styles/style.css
@@ -5,11 +5,14 @@ nav {
   height: 100px;
   box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
   padding: 0px 5%;
+  position: fixed;
+  width: 100%;
+  background-color: rgb(221, 195, 166);
 }
 
 section {
   width: 100%;
-  height: 95vh;
+  height: 135vh;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -27,6 +30,10 @@ nav ul {
 
 a {
   text-decoration: none;
+}
+
+ul li a:hover {
+  color: rgb(153, 119, 77);
 }
 
 .menu {
@@ -47,6 +54,7 @@ a {
   align-items: center;
   justify-content: space-between;
   font-family: "Lobster", cursive;
+  left: 1000px;
 }
 
 body {
@@ -54,8 +62,30 @@ body {
 }
 
 .img1 {
-  left: 70%;
-  bottom: 0px;
-  width: 300px;
-  border-radius: 6px;
+  position: absolute;
+  left: 2%;
+  bottom: 100px;
+  width: 400px;
+  border-radius: 22px;
+}
+.img2 {
+  position: absolute;
+  left: 44%;
+  bottom: 265px;
+  width: 400px;
+  border-radius: 22px;
+}
+.img3 {
+  position: absolute;
+  left: 23%;
+  bottom: 410px;
+  width: 400px;
+  border-radius: 22px;
+}
+.img4 {
+  position: absolute;
+  left: 23%;
+  bottom: 120px;
+  width: 400px;
+  border-radius: 22px;
 }
